# forager-stream

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: __init__.py  deps.py  main.py
api/routers/: __init__.py  rss_articles.py  rss_feeds.py
config/: sample.subscriptions.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: AddFeed.svelte  ArticleDetail.svelte  ArticleList.svelte  ArticleResizablePanels.svelte  FeedList.svelte  HeadlineMarquee.svelte  ResizablePanels.svelte  api.js
src/forager/: __main__.py
src/forager/cli/: __init__.py  api.py  config.py  input.py  rss.py
src/forager/config/: config_sync.py  manager.py
src/forager/input/: __init__.py  preprocessor.py  rss.py  rss_presenter.py
src/forager/storage/: __init__.py  base.py  database.py  models.py  sqlite.py
src/forager/storage/migrations/: alembic.ini  env.py
src/forager/storage/migrations/versions/: 20250508_initial_schema.py  20250522_add_feed_string_id.py
src/forager/utils/: __init__.py  date_utils.py  feed_parser_adapter.py  http.py
