[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forager"
version = "0.1.0"
description = "Information collection system"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.0",
    "typer[all]",
    "pyyaml",
    "feedparser",
    # add others as needed
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
