[project]
name = "forager-stream"
version = "0.1.0"
description = "A flexible and extensible information collection system."
authors = [
    {name = "mchan",email = "mchen26@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (==1.15.2)",
    "feedparser (==6.0.11)",
    "python-dateutil (==2.9.0.post0)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "sqlalchemy (==2.0.41)",
    "typer (==0.15.4)",
    "urllib3 (==2.4.0)",
    "uvicorn (==0.34.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
